--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Saknet/SensorObservationBackend/issues"
+    "url": "     s://github.com/Saknet/SensorObservationBackend/issues"
   },
   "homepage": "https://github.com/Saknet/SensorObservationBackend#readme",
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
