--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Saknet/SensorObservationBackend#readme",
   "dependencies": {
+    "async-redis": "^2.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -27,8 +28,7 @@
     "got": "^11.8.2",
     "morgan": "~1.9.1",
     "node-cache": "^5.1.2",
-    "pg": "^8.7.1",
-    "redis": "^3.1.2"
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@architect/sandbox": "^3.3.7",
