--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3.9"
+version: "3"
 services:
-
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379"
+  
+  redis-server: 
+    image: 'redis'
     deploy:
       replicas: 2
       update_config:
@@ -13,10 +11,25 @@ services:
       restart_policy:
         condition: on-failure
 
-  db:
-    image: postgres:9.4
+  database:
+    image: postgres:13.4
+    environment:
+      POSTGRES_DB: public
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres  
+    command: [ "postgres", "-c", "log_statement=all", "-c", "log_destination=stderr" ]        
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
+    ports:
+      - '5432:5432'
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
+      # copy the sql script to create tables
+      - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      # copy the sql script to fill tables
+      - ./sql/fill_tables.sql:/docker-entrypoint-initdb.d/fill_tables.sql
     deploy:
       placement:
         max_replicas_per_node: 1
@@ -26,15 +39,8 @@ services:
   sensorobservationbackend:
     build:
       context: .
-    environment:
-      DB_SCHEMA: postgres
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_HOST: postgres
+    env_file: ./.env
     depends_on:
-      - redis
+      - database
     ports:
       - '3000:3000' 
-    
-volumes:
-  db-data:             
