--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "pm2": "pm2 start processes.json --no-daemon",
     "start": "node ./bin/www",
+    "test": "jest --verbose",
+    "coverage": "jest --coverage",
     "lint": "eslint ."
   },
   "repository": {
@@ -26,6 +28,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-async-errors": "^3.1.1",
     "got": "^11.8.2",
     "morgan": "~1.9.1",
     "node-cache": "^5.1.2",
@@ -35,6 +38,12 @@
   },
   "devDependencies": {
     "@architect/sandbox": "^3.3.7",
-    "eslint": "^7.32.0"
+    "@trendyol/jest-testcontainers": "^2.1.0",
+    "eslint": "^7.32.0",
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
