--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "express-async-errors": "^3.1.1",
     "got": "^11.8.2",
     "morgan": "~1.9.1",
-    "node-cache": "^5.1.2",
     "pg": "^8.7.1",
-    "pm2": "^5.1.1",
     "redis": "^3.1.2"
   },
   "devDependencies": {
@@ -42,7 +40,6 @@
     "eslint": "^7.32.0",
     "jest": "^27.3.1",
     "jest-cli": "^27.3.1",
-    "redis-mock": "^0.56.3",
-    "supertest": "^6.1.6"
+    "redis-mock": "^0.56.3"
   }
 }
