--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,18 @@ services:
         condition: on-failure
 
   database:
-    image: postgres:13.4
+    image: postgis/postgis:13-master
     environment:
-      POSTGRES_DB: public
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres  
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     command: [ "postgres", "-c", "log_statement=all", "-c", "log_destination=stderr" ]        
     logging:
       options:
         max-size: 10m
         max-file: "3"
     ports:
-      - '5432:5432'
+      - '${DB_PORT}:${DB_PORT}'
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
       # copy the sql script to create tables
@@ -46,4 +46,4 @@ services:
       - '3000:3000' 
       
 volumes:
-  pgdata:      
+  postgres-data:      
